Fixed navbar on mobile devices

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -320,8 +320,7 @@ a, button {
 
 #current-tweet {
   position: relative;
-  min-height: 100vh;
-  margin-left: 19.6%;
+  height: 100vh;
   border-right: 1px solid rgba(255, 255, 255, .25);
   display: flex;
   flex-direction: column;
