--- a/client/src/styles/navigation.scss
+++ b/client/src/styles/navigation.scss
@@ -152,7 +152,8 @@
     position: fixed;
     border-top: 1px solid rgba(255,255,255,.25);
     height: 10vh;
-    top: 90vh;
+    top: auto;
+    bottom: 0;
     left: 0;
     z-index: 20 !important;
     padding-top: 0;
@@ -193,7 +194,7 @@
       margin: 0;
       position: fixed;
       right: 20px;
-      bottom: 100px;
+      bottom: 90px;
       box-shadow: rgba(136, 153, 166, 0.2) 0px 0px 10px !important;
     }
 
